# nellie-rs

./: .gitignore  BENCHMARKS.md  CHECKPOINT.md  CLAUDE.md  Cargo.toml  Cross.toml  DEVELOPMENT_PLAN.md  FINAL_VERIFICATION_REPORT.md  LICENSE  NELLIE.md  PROJECT_BRIEF.md  README.md  VERIFICATION_REPORT.md  deny.toml  rustfmt.toml
.cargo/: config.toml
.claude/agents/: nellie-rs-executor.md  nellie-rs-verifier.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: search_benchmark.rs
docs/: AGENT_GUIDE.md  INSTALL_PROMPT.md  OPERATOR_GUIDE.md
memory/: 2025-02-11.md  2025-02-12.md  2026-02-11.md  2026-02-13.md  heartbeat-state.json
packaging/: install-local.sh  install-private.sh  install-universal.sh  install.sh  nellie.conf  nellie.service  uninstall.sh
packaging/macos/: com.nellie-rs.server.plist  install-macos.sh  migrate-from-python.sh
plans/: PHASE_0_FOUNDATION.md  PHASE_1_CORE.md  PHASE_2_INDEXER.md  PHASE_3_FEATURES.md  PHASE_4_API.md  PHASE_5_PACKAGING.md  PHASE_6_INTEGRATION.md
scripts/: build-release.sh
src/: lib.rs  main.rs
src/config/: mod.rs  settings.rs
src/embeddings/: mod.rs  model.rs  service.rs  worker.rs
src/error/: mod.rs  tests.rs
src/server/: app.rs  auth.rs  mcp.rs  mcp_transport.rs  metrics.rs  mod.rs  observability.rs  rest.rs  sse.rs
src/storage/: agent_status.rs  checkpoints.rs  checkpoints_search.rs  chunks.rs  connection.rs  file_state.rs  lessons.rs  lessons_search.rs  mod.rs  models.rs  schema.rs  search.rs  vector.rs
src/watcher/: chunker.rs  events.rs  filter.rs  handler.rs  indexer.rs  mod.rs  scanner.rs  watcher.rs
tests/: integration_vector_search.rs  watcher_integration.rs
